gccida/g2/gen_decl_die
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_decl_die/src/dwarf2out.c:11877:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *abstract_origin; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_decl_die/src/dwarf2out.c:11886:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *chain; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_decl_die/src/dwarf2out.c:11887:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_decl_die/src/dwarf2out.c:11900:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_decl_die/src/dwarf2out.c:11901:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v29; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_decl_die/src/dwarf2out.c:11916:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v44; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_decl_die/src/dwarf2out.c:11924:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v52; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_decl_die/src/dwarf2out.c:11927:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_decl_die/src/dwarf2out.c:11946:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v74; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_decl_die/src/dwarf2out.c:11952:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v80; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_decl_die/src/dwarf2out.c:11953:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v81; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_decl_die/src/dwarf2out.c:11958:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v86; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_decl_die/src/dwarf2out.c:11974:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *result; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_decl_die/src/dwarf2out.c:12013:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 <= DINFO_LEVEL_TERSE ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_decl_die/src/dwarf2out.c:12044:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 <= DINFO_LEVEL_TERSE ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_decl_die/src/dwarf2out.c:12078:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 10568, "gen_label_die"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_decl_die/src/dwarf2out.c:12113:49: error: member reference base type 'dw_die_ref' (aka 'struct die_struct *') is not a structure or union
arguments = ( tree)*( ( _QWORD *)&decl_die_table->die_tag + uid); 
                                  ~~~~~~~~~~~~~~^ ~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_decl_die/src/dwarf2out.c:12145:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 <= DINFO_LEVEL_TERSE ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_decl_die/src/dwarf2out.c:12208:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 11221, "gen_tagged_type_instantiation_die"); 
                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_decl_die/src/obj/dwarf2out.o] Error 1
